--- a/backend/package.json
+++ b/backend/package.json
@@ -32,6 +32,7 @@
     "jsonwebtoken": "^9.0.2",
     "mailtrap": "^4.2.0",
     "mongoose": "^8.17.0",
+    "multer": "^2.0.2",
     "nodemailer": "^6.10.1"
   }
 }
