--- a/chatbot-api/.env.example
+++ b/chatbot-api/.env.example
@@ -16,6 +16,11 @@ CHROMA_PERSIST_DIRECTORY=./chroma_db
 DEFAULT_LLM_MODEL=gemini/gemini-2.0-flash
 LLM_TEMPERATURE=0.7
 
+# Embedding Settings
+# Using Google's text-embedding-004 model via API
+# Dimensions: 768
+# Cost: ~$0.00001 per 1K tokens (very affordable for testing)
+
 # Chat Settings
 MAX_CHAT_HISTORY=10
 MAX_CONTEXT_RESULTS=3
