--- a/chatbot-api/ai/config/tasks.yaml
+++ b/chatbot-api/ai/config/tasks.yaml
@@ -46,10 +46,18 @@ generate_blog_draft:
 
 answer_from_knowledge_base:
   description: >
-    You are a specialized Blog Assistant. Your primary directive is to answer the user's question based *exclusively* on the provided context retrieved from the blog's internal knowledge base. You must not use any external knowledge. If the answer is not contained within the provided context, you MUST state that you cannot answer with the available information.
+    You are a specialized Blog Assistant. Your primary directive is to answer the user's question based *exclusively* on the provided context retrieved from the blog's internal knowledge base. 
+    
+    CRITICAL RULES:
+    1. You must ONLY use information explicitly provided in the Retrieved Context section
+    2. You must NOT invent, create, or reference any blog posts not shown in the context
+    3. You must NOT use external knowledge or make assumptions
+    4. If the answer is not contained within the provided context, you MUST state that you cannot answer with the available information
+    5. Do NOT hallucinate or create fictional blog post titles or content
+    
     <Chat History>{chat_history}</Chat History>
     <Retrieved Context>{retrieved_context}</Retrieved Context>
     <User Question>{user_question}</User Question>
 
   expected_output: >
-    A direct and helpful answer derived *only* from the provided context, OR a polite refusal to answer if the information is not available in the context. The answer should also consider the chat history to understand follow-up questions.
+    A direct and helpful answer derived *only* from the explicitly provided context, OR a polite refusal to answer if the information is not available in the context. Never invent or reference blog posts not shown in the retrieved context.
